assets/css/base.css
/* ... */
.toggle-panel-label {
    height: 100%;
    font-size: 1em;
    width: var(--toggle-label-width);
    cursor: pointer;
    text-align: center;
    cursor: ew-resize;
}

.toggle-panel-label span {
    background-color: var(--main-color);
    color: var(--text2-color);
    padding: var(--spacing) var(--half-spacing);    
    display: block;     
}

.toggle-panel-label:hover {
    background-color: var(--main-color);
}

:checked ~ .toggle-panel {
    display: flex;
    flex-direction: column;
    max-width: min-content;
}

input.toggle-panel-toggle {
    display: none;
}

/* section-subtitle: bookmarks h3, #filters legend, .edit #rightbar h3… */
.toggle-panel-content h3,
.toggle-panel-content legend {
    font-weight: bold;
    width: calc(100% + var(--double-spacing));
    font-size: 1em;
    padding: var(--half-spacing) var(--spacing);
    border-bottom: 1px solid var(--tertiary-background-color);
    margin: 0 0 var(--spacing) var(--reset-spacing);
    display: flex;
    justify-content: space-between;
}

/* --------------------------------------------------------- delete */
/* to be moved in dedicated CSS? */
.confirm-delete {
    display: flex;
    flex-direction: column;
    gap: var(--spacing);
    padding: var(--spacing);
}

/* --------------------------------------------------------- workspace button (no-js) */
#save-workspace {
    position: absolute;
    right: var(--spacing);
}
.js #save-workspace {
    display: none;
}
/* --------------------------------------------------------- media queries */


@media (max-width: 900px) {
    header a span, footer {
        display: none;
    }
}


@media (max-width: 750px) {
    header a span, footer, aside a span {
        display: none;
    }
}


@media (max-width: 550px) {

    header a span, footer, header span#search, aside a span, .text {
        display: none;
    }

    .toggle-panel-container {
        display: block;
    }
    .toggle-panel-label {
        height: min-content;
        width: 100%;
        background: none;
        position: absolute;
        text-align: right;
    }
    .toggle-panel-label span,
    .toggle-panel-label:hover {
        background: none;
    }
    .toggle-panel {
        grid-row: 1;
        display: block;
    }
    :checked ~ .toggle-panel {
        max-width: none;
    }
    .toggle-panel-content {
        display: none;
    }
    :checked ~ .toggle-panel .toggle-panel-content {
        display: block;
    }

    .bar {
        flex-direction: column;
    }

    label.toogle {
        width: 100%;
        height: 30px;
    }
}

@media (pointer: coarse) {

    header a span, footer, header span#search, aside a span, .text {
        display: none;
    }

    body, input, select, button {
        /* font-size: 20px; */
    }

    input[type="checkbox"], input[type="radio"] {
        height: 22px;
        width: 22px !important;
    }

    header a {
        /* font-size: 35px; */
    }
    
}


/* __________________________ Flash Messages ___________________________ */

#flashmessage {
    color: white;
    border: solid white 1px;
    position: fixed;
    animation-delay: 5s;
    animation-name: flash;
    animation-duration: 2s;
    animation-fill-mode: forwards;
    max-height: 200px;
    width: 100%;
}

div#flashmessage:target {
    display: none;
}

#flashmessage ul {
    max-height: 200px;
    overflow-y: auto;
    margin: auto;
    z-index: 5;
}


#flashmessage li.alert-info {
    background-color: grey;
}

#flashmessage li.alert-warning {
    background-color: #FF5722;
}

#flashmessage li.alert-success {
    background-color: green;
}

#flashmessage li.alert-error {
    background-color: red;
}


@keyframes flash {
    from {
      top: 0;
    }
  
    to {
      top: -200px;
    }
  }
  

table a, li a {
    color: var(--text3-color);
}


.panel input, .panel select, .panel textarea {
    margin-bottom: 3px;
}

